@@ -52,31 +52,6 @@ sub finally {
   return $new;
 }
 
-sub map {
-  my ($class, $options) = (shift, ref $_[0] eq 'HASH' ? shift : {});
-  my ($cb,    @items)   = @_;
-
-  my @start = map { $_->$cb } splice @items, 0,
-    $options->{concurrency} // @items;
-  my $proto = $class->resolve($start[0]);
-
-  my (@trigger, @wait);
-  for my $item (@items) {
-    my $p = $proto->clone;
-    push @trigger, $p;
-    push @wait,    $p->then(sub { local $_ = $item; $_->$cb });
-  }
-
-  my @all = map {
-    $proto->clone->resolve($_)->then(
-      sub { shift(@trigger)->resolve if @trigger; @_ },
-      sub { @trigger = (); $proto->clone->reject($_[0]) },
-    )
-  } (@start, @wait);
-
-  return $class->all(@all);
-}
-
 sub new {
   my $self = shift->SUPER::new;
   shift->(sub { $self->resolve(@_) }, sub { $self->reject(@_) }) if @_;
@@ -420,33 +395,6 @@ reason.
   $promise->finally(sub {
     say "We are done!";
   });
-
-=head2 map
-
-  my $new = Mojo::Promise->map(sub {...}, @items);
-  my $new = Mojo::Promise->map({concurrency => 3}, sub {...}, @items);
-
-Apply a function that returns a L<Mojo::Promise> to each item in a list of
-items while optionally limiting concurrency. Returns a L<Mojo::Promise> that
-collects the results in the same manner as L</all>. If any item's promise is
-rejected, any remaining items which have not yet been mapped will not be. Note
-that this method is B<EXPERIMENTAL> and might change without warning!
-
-  # Perform 3 requests at a time concurrently
-  Mojo::Promise->map({concurrency => 3}, sub { $ua->get_p($_) }, @urls)
-    ->then(sub{ say $_->[0]->res->dom->at('title')->text for @_ });
-
-These options are currently available:
-
-=over 2
-
-=item concurrency
-
-  concurrency => 3
-
-The maximum number of items that are in progress at the same time.
-
-=back
 
 =head2 new
 
