@@ -1,5 +1,7 @@
 
 8.43  2020-05-18
+  - Removed experimental map method from Mojo::Promise, since its test coverage
+    was lacking, getting in the way of new feature development.
   - Removed deprecated argument handling from Mojo::Promise::new.
   - Fixed a bug where the resolve class method in Mojo::Promise would
     unnecessarily create new promises.
